--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,11 @@ body {
 	margin:0 auto;
 }
 
-
+form{
+	
+	text-align:center;
+	
+}
 
 .number{
 margin: 20px auto;
@@ -59,7 +63,7 @@ text-align:center;
 
 }
 
-#guess{
+.input{
 	width: 200px;
 	display:block;
 	margin: 0 auto;
@@ -68,9 +72,9 @@ text-align:center;
 	
 }
 
-#submit{
+.submit{
 	display:block;
 
-	margin: 10px auto;}
+	margin: 20px auto;}
 
 
