--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Rum+Raisin);
-@charset "utf-8";
 @import url("reset.css");
 
 /* CSS Document */
-
 
 h1{
 
@@ -12,9 +10,9 @@ text-align: center;
 font-size: 36px;
 line-height: 130px;
 font-weight: bold;
-
 letter-spacing: -2px;
 }
+
 /* Glyph, by Harry Roberts */
 		
 hr {
@@ -38,7 +36,6 @@ h2{
 	font-size: 30px;
 	line-height: 60px;
 	font-weight:bold;
-	
 }
 
 body {
@@ -46,6 +43,8 @@ body {
 	color:#34495E;
 	font-family: 'Rum Raisin', sans-serif;
 }
+
+
 .content{
 	width:960px;
 	margin:0 auto;
@@ -79,5 +78,6 @@ text-align:center;
 #reset{
 	
 
-	margin: 10px auto;}
+	margin: 10px auto;
+}
 
