--- a/css/main.css
+++ b/css/main.css
@@ -82,15 +82,13 @@ text-align:center;
 margin: 10px 10px;
 display: inline-block;
 width: 90px;
-/*color: #fff;*/
+color: #fff;
 font-size: 15px;
-/*background: #34495e;*/
+background: #34495e;
 border-radius: 3px;
 padding: 12px 0;
 font-weight: 500;
-
-
-	
+border: none;
 	}
 
 
